Changed the last section to my personal photographt gallery.

--- a/index.html
+++ b/index.html
@@ -162,51 +162,118 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
+            <!-- Gallery-->
             <section class="resume-section" id="awards">
+              <div class="resume-section-content">
+                <style>
+                  div.gallery {
+                    margin: 5px;
+                    border: 1px solid #ccc;
+                    float: left;
+                    width: 180px;
+                  }
+
+                  div.gallery:hover {
+                    border: 1px solid #777;
+                  }
+
+                  div.gallery img {
+                    width: 100%;
+                    height: auto;
+                  }
+
+                  div.desc {
+                    padding: 15px;
+                    text-align: center;
+                  }
+                </style>
+
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Annual Banana Reaper Awards
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Annual Best Gator Keeper Awards
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - Banana Culinary Competition
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - Aligator Postpartum Care Competition
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
+                  <h2 class="mb-5">Photo Gallery</h2>
+                  <div class="subheading mb-5">
+                      Visit my <b>actual</b> personal website for more:
+                      <a href="https://leokwo.com/photography">leokwo.com</a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/city/small-5872.jpg">
+                      <img src="photos/city/small-5872.jpg" alt="Seattle Sunset" width="600" height="400">
+                    </a>
+                  </div>
+
+                  <div class="gallery">
+                    <a target="_blank" href="photos/city/small-2.jpg">
+                      <img src="photos/city/small-2.jpg" alt="King ST Station" width="600" height="400">
+                    </a>
+                  </div>
+
+                  <div class="gallery">
+                    <a target="_blank" href="photos/city/small-5887.jpg">
+                      <img src="photos/city/small-5887.jpg" alt="Seattle Sunset 2" width="600" height="400">
+                    </a>
+                  </div>
+
+                  <div class="gallery">
+                    <a target="_blank" href="photos/city/small-4842.jpg">
+                      <img src="photos/city/small-4842.jpg" alt="Shenzhen" width="600" height="400">
+                    </a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/city/small-5206.jpg">
+                      <img src="photos/city/small-5206.jpg" alt="Seattle Downtown" width="600" height="400">
+                    </a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/city/small--2.jpg">
+                      <img src="photos/city/small--2.jpg" alt="Seattle Helix Bridge" width="600" height="400">
+                    </a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/city/small-4196.jpg">
+                      <img src="photos/city/small-4196.jpg" alt="" width="600" height="400">
+                    </a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/Misc/small-5046.jpg">
+                      <img src="photos/Misc/small-5046.jpg" alt="Canon AE-1" width="600" height="400">
+                    </a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/Misc/small-5047.jpg">
+                      <img src="photos/Misc/small-5047.jpg" alt="Canon AE-1 2" width="600" height="400">
+                    </a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/Misc/small-5043.jpg">
+                      <img src="photos/Misc/small-5043.jpg" alt="Canon AE-1 3" width="600" height="400">
+                    </a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/People/small-2348.jpg">
+                      <img src="photos/People/small-2348.jpg" alt="people" width="600" height="400">
+                    </a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/People/small-2391.jpg">
+                      <img src="photos/People/small-2391.jpg" alt="people 2" width="600" height="400">
+                    </a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/Misc/small-.jpg">
+                      <img src="photos/Misc/small-.jpg" alt="UW Sakura" width="600" height="400">
+                    </a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/People/small-2433.jpg">
+                      <img src="photos/People/small-2433.jpg" alt="people 3" width="600" height="400">
+                    </a>
+                  </div>
+                  <div class="gallery">
+                    <a target="_blank" href="photos/People/small-2697.jpg">
+                      <img src="photos/People/small-2697.jpg" alt="people 4" width="600" height="400">
+                    </a>
+                  </div>
                 </div>
+              </div>
             </section>
         </div>
         <!-- Bootstrap core JS-->
